Fix left arrow spacing

--- a/domestic/sass/components/_filters.scss
+++ b/domestic/sass/components/_filters.scss
@@ -37,7 +37,6 @@
                     float: left;
                     height: 8px;
                     margin: 5px 10px 0 0;
-                    right: 3px;
                     width: 8px;
                 }
             }
@@ -90,8 +89,12 @@
         >input[type='checkbox']:checked+label.arrows-left:before {
             border-width: 0 2px 2px 0;
             top: 2px;
-            right: 0;
-            margin: 0 10px 0 0;
+
+            @media screen and (max-width: 640px) {
+                right: 0;
+                margin: 0 10px 0 0;
+            }
+
         }
 
         >input[type='checkbox']:checked+label+.options {
